# dog-abandonment-prevention-ml-pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/metrics/: binary_metrics_return_within_90d.json  reason_metrics_return_within_90d.json
examples/: quickstart_local.md  sample_input.csv
legacy/: README.md
legacy/2025_submission/: cwd.py
legacy/2025_submission/baseline_notebooks/: 01_data_preparation.ipynb  02_modelling_and_evaluation.ipynb
legacy/2025_submission/docs/: README_2025.md
legacy/2025_submission/reports/: design_doc_2025.md  technical_report_2025.md
legacy/2025_submission/src/: preprocessing_v1.py
reports/: intakes_missing_summary.csv  outcomes_missing_summary.csv
reports/metrics/: metrics_baseline.json  metrics_comparison.csv
src/dog_abandonment/: __init__.py  cli.py  config.py  evaluate.py  interventions.py  predict.py  preprocessing.py  return_labels.py  train.py
