[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-abandonment-prevention-ml-pipeline"
version = "0.1.0"
description = "ML pipeline for dog abandonment prevention: risk prediction, reason classification, and decision support."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ibrahim Malik"}]

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
]

[project.scripts]
dog-abandonment = "dog_abandonment.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
